--- a/Eco_Commerce/templates/base.html
+++ b/Eco_Commerce/templates/base.html
@@ -15,22 +15,37 @@
     </title>
   </head>
   <body>
-  <div class="container">
+  <div class="container" style="padding: 10px 0;">
+    <div class="messages container mt-2">
+      {% if messages %}        
+        {% for message in messages %}
+          <div {% if message.tags %} 
+          class="alert alert-{{message.tags}} {% endif %}"
+          role="alert">
+            {{message}}
+            <button type="submit" class="close" data-dismiss="alert" aria-label="close">
+              <span aria-hidden="true">&times;</span>
+            </button>
+          </div>
+        {% endfor %}     
+      {% endif %}
+
+    </div>
     
     {% block body_block %}
       
 
 
+    {% endblock body_block %}
 
 
-    
+
      <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
 
-    {% endblock body_block %}
       
 
   </div>
