--- a/Eco_Commerce/templates/App_Shop/home.html
+++ b/Eco_Commerce/templates/App_Shop/home.html
@@ -1,30 +1,28 @@
 {% extends 'base.html' %}
 {% block body_block %}
-    
 
-{% for product in object_list %}
+<div class="container my-5">
+    <h2 class="my-5">Featured Products</h2>
+    <div class="row">
+        {% for product in object_list %}
+        <div class="col-lg-3 col-md-6 col-sm-12">
+            <figure class="card card-product">
+                <div class="img-wrap">
+                    <img src="/media/{{product.main_image}}" alt="" style="width:100%; height:300px;">
+                </div>
+                <figcaption class="info-wrap">
+                    <h4 class="title"><a href="{% url 'App_Shop:product_detail' pk=product.pk %}">{{product.name}}</a></h4>
+                    <div class="action-wrap">
+                        <div class="price-wrap h5">
+                            <span class="price-new"><b>&#2547; {{product.price|floatformat:2}}</b></span>
+                            <span class="price-old"><del> &#2547; {{product.old_price|floatformat:2}}</del></span>
+                        </div>
+                    </div>
+                </figcaption>
+            </figure>
+        </div>
+        {% endfor %}
 
-{{product.main_image}}
-<br>
-{{product.name}}
-<br>
-{{product.category}}
-<br>
-{{product.preview_text}}
-<br>
-{{product.detail_text}}
-<br>
-${{product.price}}
-<br>
-${{product.old_price}}
-<br>
-{{product.created_date}}
-
-
-{% endfor %}
-    
-
-
-
+    </div>
+</div>
 {% endblock body_block %}
-    
