--- a/Eco_Commerce/templates/App_Shop/product_details.html
+++ b/Eco_Commerce/templates/App_Shop/product_details.html
@@ -26,7 +26,7 @@
                         <dd>{{object.detail_text|linebreaks}}</dd>
                     </dl>
                     <br>
-                    <a href="" class="btn btn-lg btn-outline-primary text-uppercase"><i class="fas fa-shopping-cart"></i> Add To Cart</a>
+                    <a href="{% url 'App_Order:add' pk=object.pk %}" class="btn btn-lg btn-outline-primary text-uppercase"><i class="fas fa-shopping-cart"></i> Add To Cart</a>
                 </article>
             </aside>
         </div>
@@ -34,3 +34,5 @@
 </div>
 
 {% endblock body_block %}
+
+
