--- a/Eco_Commerce/templates/navbar.html
+++ b/Eco_Commerce/templates/navbar.html
@@ -1,3 +1,4 @@
+{% load cart_tag %}
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
         <a class="navbar-brand" href="{% url 'App_Shop:home' %}">Mobile Store</a>
@@ -9,7 +10,10 @@
             <ul class="navbar-nav ml-auto">         
                 {% if request.user.is_authenticated   %}                                 
                 <li class="nav-item">
+                 <a href="{% url 'App_Order:cart' %}" class="nav-link">
                     <i class="fa fa-shopping-cart"></i>Cart
+                    <span class="badge badge-light"> {{request.user | cart_total}} </span>
+                 </a>   
                 </li> 
                 <li class="nav-item dropdown">
                     <a href="" class="nav-link dropdown-toggle" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"><i class="fas fa-user-tie"></i> {{request.user.profile.username}} </a>
