--- a/Eco_Commerce/templates/navbar.html
+++ b/Eco_Commerce/templates/navbar.html
@@ -30,6 +30,9 @@
                 <li class="nav-item">
                     <a href="{% url 'App_Login:login' %}" class="btn btn-primary">Login</a>
                 </li>
+                <li class="nav-item ml-2">
+                    <a href="{% url 'App_Login:signup' %}" class="btn btn-primary">Signup</a>
+                </li>
                 {% endif %}
             </ul>
 
