--- a/Eco_Commerce/templates/App_Login/signup.html
+++ b/Eco_Commerce/templates/App_Login/signup.html
@@ -1,18 +1,52 @@
 {% extends 'base.html' %}
 {% load crispy_forms_tags %}
 {% block title_block %} Sign Up  {% endblock title_block %}
+<!-- css -->
+{% block css_block %}
+   <style>
+    .sign_up{
+        width: 550px;
+        margin: auto;
+        border: 3px solid rgba(21, 94, 118, 0.806);
+        padding: 40px;
+    }
+    .sign_up form button{
+        width: 100%;
+        background-color: rgba(21, 94, 118, 0.806);
+        color: azure;
+    }
+    .sign_up h3{
+        text-align: center;
+        color: rgba(21, 94, 118, 0.806);
+        padding-bottom: 20px;
+        text-decoration: underline;
+    }
+    .log_in{
+        width: 550px;
+        /* padding: 40px; */
+        border: 2px solid #ccc;
+        text-align: center;
+        margin: auto;
+    }
+
+   </style> 
+{% endblock css_block %}
+
 {% block body_block %}
-<h2>Create New Account</h2>   
-<form method="POST">
-    {{form|crispy}}
-    {% csrf_token %}
-    <button type="submit" class="btn btn-primary btn-sm"> Sign Up </button>
+<div class="sign_up">
+    <h3>Create New Account</h3>   
+    <form method="POST">
+        {{form|crispy}}
+        {% csrf_token %}
+        <button type="submit" class="btn btn-primary btn-sm"> Sign Up </button>
+    </form>
+</div>
 
-
-</form>
 <br>
 <hr>
-<p>Already Have an Account?<a href="{% url 'App_Login:login' %}">Login Here</a></p>
+<div class="log_in">
+    <p>Already Have an Account? <a href="{% url 'App_Login:login' %}">Login Here</a></p>
+</div>
 
 
 
