--- a/Eco_Commerce/templates/base.html
+++ b/Eco_Commerce/templates/base.html
@@ -11,8 +11,11 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css" integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="{% static 'css/custom.css' %}">
-    <title>{% block title_block %} E-Commerce {% endblock title_block %}
-    </title>
+    <title> {% block title_block %} E-Commerce {% endblock title_block %} </title>
+      <!-- CSS BLOCK -->
+      {% block css_block %}
+
+      {% endblock %}
     <style>
       .card{
         height: 350px;
@@ -61,7 +64,7 @@
   </head>
   <body>
     {% include 'navbar.html' %}
-  <div class="container">
+  <div class="container my-5">
     <div class="messages container mt-2">
       {% if messages %}        
         {% for message in messages %}
