--- a/Eco_Commerce/templates/navbar.html
+++ b/Eco_Commerce/templates/navbar.html
@@ -9,6 +9,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">         
                 {% if request.user.is_authenticated   %}                                 
+                <li class="nav-item"><a href="{% url 'App_UserLog:userlog' %}" class="nav-link">User Log</a></li>
                 <li class="nav-item">
                  <a href="{% url 'App_Order:cart' %}" class="nav-link">
                     <i class="fa fa-shopping-cart"></i>Cart
